--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "@discordjs/opus": "^0.1.0",
+    "discord.js": "^11.6.3",
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
     "node-gyp": "^6.0.0",
     "opusscript": "0.0.7",
     "rebuild": "^0.1.2",
-    "ytdl-core": "^1.0.0"
+    "ytdl-core": "^1.0.9"
   }
 }
