--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
     "discord.js": "^11.6.3",
+    "enmap": "^5.3.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
-    "node-fetch": "^2.6.0",
     "node-gyp": "^6.0.0",
     "opusscript": "0.0.7",
     "rebuild": "^0.1.2",
-    "spotify-web-api-node": "^4.0.0",
-    "ytdl-core": "^1.0.9",
-    "ytsr": "^0.1.12"
+    "ytdl-core": "^1.0.9"
   }
 }
