--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
-    "discord.js": "^11.6.3",
+    "discord.js": "^12.2.0",
     "enmap": "^5.3.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
     "node-gyp": "^6.0.0",
     "opusscript": "0.0.7",
+    "path": "^0.12.7",
     "rebuild": "^0.1.2",
     "ytdl-core": "^1.0.9"
   }
