--- a/configs/config.json
+++ b/configs/config.json
@@ -1,4 +1,4 @@
 {
-    "token" : "Njk1MTM3NzE1OTEzNjIxNTM0.XoVzcg.edDg8Heyget-1lNh6FKwq3PjAeI",
-    "prefix" : "?"
+    "token" : "NTk4OTkyMzk0NjE2MzA3ODA3.XSexLQ.RpGakfVSnM21lTIqxbCN_wTNFhQ",
+    "prefix" : "!"
 }
