--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marquinhosbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,14 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
-    "discord.js": "^11.6.3",
+    "clear-module": "^4.1.1",
+    "discord.js": "^12.2.0",
     "enmap": "^5.3.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
     "node-gyp": "^6.0.0",
     "opusscript": "0.0.7",
+    "path": "^0.12.7",
     "rebuild": "^0.1.2",
-    "ytdl-core": "^1.0.9"
+    "winston": "^3.3.3",
+    "ytdl-core": "^1.0.9",
+    "ytdl-core-discord": "^1.2.1",
+    "ytsr": "^0.1.21"
   }
 }
