--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "opusscript": "0.0.7",
     "path": "^0.12.7",
     "rebuild": "^0.1.2",
+    "watch": "^1.0.2",
     "winston": "^3.3.3",
     "ytdl-core": "^1.0.9",
     "ytdl-core-discord": "^1.2.1",
