--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.1.0",
     "clear-module": "^4.1.1",
     "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "enmap": "^5.3.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
