Adiciona roleta de admins

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 TOKEN=NTk4OTkyMzk0NjE2MzA3ODA3.XSexLQ.RpGakfVSnM21lTIqxbCN_wTNFhQ
 PREFIX=!
+GUILD_NAME=Devaneios
 OUTSIDER_ROLE_NAME=Outsiders
+ADMIN_ROLE_NAME=Vice-dono
+COMPUTEIRO_ROLE_NAME=Computeiro
 DEFAULT_CHANNEL_ID=680975188581416998
 RULES_CHANNEL_ID=741771243317100554
 NEWCOMERS_CHANNEL_ID=739562824178729122
