--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
+    "node-fetch": "^2.6.1",
     "node-gyp": "^6.0.0",
     "opusscript": "0.0.7",
     "path": "^0.12.7",
