--- a/.env_sample
+++ b/.env_sample
@@ -9,3 +9,4 @@ RULES_CHANNEL_ID=<your rules channel ID here>
 NEWCOMERS_CHANNEL_ID=<your welcome channel ID here>
 BOT_CHANNEL_ID=<your bot request channel ID here>
 LINKS_CHANNEL_ID=<your default links channel ID here>
+TMDB_API_KEY=<your tmdb api key here>
