Update packages version and remove unsed ones

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "enmap": "^5.3.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
     "node": "^12.12.0",
     "node-gyp": "^6.0.0",
@@ -23,8 +24,7 @@
     "rebuild": "^0.1.2",
     "watch": "^1.0.2",
     "winston": "^3.3.3",
-    "ytdl-core": "^3.3.0",
-    "ytdl-core-discord": "^1.2.1",
-    "ytsr": "^1.0.4"
+    "ytdl-core": "^4.4.5",
+    "youtube-scrape": "git+https://github.com/Guilhermeasper/youtube-scrape.git"
   }
 }
